--- a/HRCIntegrationServices/HRCIS.SchemaLoader/HRCIS.SchemaLoader.csproj
+++ b/HRCIntegrationServices/HRCIS.SchemaLoader/HRCIS.SchemaLoader.csproj
@@ -53,18 +53,18 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Enums\DataType.cs" />
-    <Compile Include="Entities\HRCColumn.cs" />
+    <Compile Include="Entities\HrcColumn.cs" />
     <Compile Include="Strategies\ISchemaLoaderStrategy.cs" />
     <Compile Include="Lists\ColumnList.cs" />
     <Compile Include="Lists\SchemaList.cs" />
     <Compile Include="Lists\TableList.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Entities\HRCSchema.cs" />
+    <Compile Include="Entities\HrcSchema.cs" />
     <Compile Include="SchemaLoader.cs" />
-    <Compile Include="Strategies\SQLSchemaLoader.cs" />
-    <Compile Include="Entities\HRCTable.cs" />
-    <Compile Include="TypeMapping\HRCDbDataType.cs" />
-    <Compile Include="TypeMapping\HRCMappingHelper.cs" />
+    <Compile Include="Strategies\SqlSchemaLoader.cs" />
+    <Compile Include="Entities\HrcTable.cs" />
+    <Compile Include="TypeMapping\HrcDbDataType.cs" />
+    <Compile Include="TypeMapping\HrcMappingHelper.cs" />
     <Compile Include="TypeMapping\OracleTypes.cs" />
     <Compile Include="TypeMapping\SqlTypes.cs" />
   </ItemGroup>
